hphp/hack/test/typecheck/trait_priv_extends3.php.exp
File "trait_priv_extends3.php", line 14, characters 11-13:
Member c has the wrong type (Typing[4341])
File "trait_priv_extends3.php", line 14, characters 11-13:
Typing error
File "trait_priv_extends3.php", line 8, characters 12-13:
Expected C1
File "trait_priv_extends3.php", line 14, characters 12-13:
But got C2
